--- a/app/pom.xml
+++ b/app/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>no.bekk.aws</groupId>
-    <artifactId>hello-world</artifactId>
+    <artifactId>aws-workshop</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
