--- a/app/pom.xml
+++ b/app/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.30</version>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.9.6</version>
+        </dependency>
     </dependencies>
 
     <properties>
